--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Blank
+      UTM Space
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -9,12 +9,19 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
+      <ion-title size="large">UTM Space2</ion-title>
     </ion-toolbar>
   </ion-header>
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
+  <div class="ion-padding">
+    <h1 class="text-header">{{ titleText }}</h1>
+    <ion-button expand="block" color="success" (click)="btnClick()">Click Me!</ion-button>
+    
+    <p *ngFor="let car of cars">I love to drive {{ car.color }} {{car.model }}</p>
+
+    <ion-button routerLink="/profile">Go to Profile</ion-button>
+
   </div>
+
+
 </ion-content>
